# opaque-over-tls

./: .gitignore  .gitmodules  Cargo.toml  README.md
benchmarks/: opaque_alone_argon2.csv  opaque_alone_argon2.ods  opaque_alone_id.csv  opaque_alone_id.ods  tls_alone_ecdhe.csv  tls_alone_ecdhe.ods  tls_alone_ed25519.csv  tls_alone_ed25519.ods  tls_alone_rsa.csv  tls_alone_rsa.ods  tls_alone_rsa2048.ods  tls_alone_rsa4096.csv  tls_alone_rsa4096.ods
openssl/: cert.conf  csr.conf  generate.sh
src/: lib.rs
