[package]
name = "opaque-over-tls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# mio = "0.8" # Async I/O for net and other things, might not be needed, see std::net instead
rustls = "0.20"
rustls-pemfile = "1"
x509-parser = "0.14"
opaque-ke = { version = "2", features = ["argon2"] }
rand = "^0.8"
argon2 = "^0.4"
