[package]
name = "opaque-over-tls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# TLS
rustls = "0.20"
# TLS: certificate parsing
rustls-pemfile = "1"
x509-parser = "0.14"
# OPAQUE
opaque-ke = { version = "2", features = ["argon2"] }
rand = "^0.8"
argon2 = "^0.4"
# Symmetric cipher to use with the session key obtained from OPAQUE
aes-gcm-siv = "^0.11"
